assets/styles/layout.css
/* Header styles */
.header {
	background-color: var(--color-background-header);
	border-bottom: 2px solid var(--color-border-secondary);
	height: var(--layout-header-height);
	left: 0;
	position: fixed;
	right: 0;
	top: 0;
	width: 100%;
	z-index: 60;
}

.nav {
	align-items: center;
	display: flex;
	gap: 0.5rem;
	margin: 0 auto;
	max-width: var(--layout-max-width);
	padding: 0.5rem var(--layout-inline-padding);
	width: 100%;

	@media (min-width: 768px) {
		gap: 2rem;
	}
}

.nav-logo {
	height: 2.5rem;

	@media (min-width: 768px) {
		height: 3.5rem;
	}
}

.nav-logo-img {
	height: 100%;
	width: auto;
}

.nav-buttons {
	align-items: center;
	display: flex;
	gap: 0.5rem;
	margin-left: auto;

	@media (min-width: 768px) {
		gap: 2rem;
	}
}

/* Main content */
.main-content {
	margin: 0 auto;
	max-width: var(--layout-max-width);
	padding-bottom: 6rem;
	padding-left: var(--layout-inline-padding);
	padding-right: var(--layout-inline-padding);
	padding-top: var(--layout-scroll-header-offset);
}

